[package]
name = "chat"
version = "0.1.0"
authors = ["lorentz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
